--- a/pages/index.css
+++ b/pages/index.css
@@ -6,4 +6,110 @@
     serif;
   font-size: 16px;
   line-height: 20px;
+  background-color: #ffffff;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  min-height: 720px;
+  max-height: 800px;
+  background-image: url("../images/background_header.svg");
+  background-size: cover;
+  padding-top: 30px;
+  position: relative;
+  box-sizing: border-box;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav__logo {
+  height: 39px;
+  width: 105px;
+  margin-left: 30px;
+}
+
+.nav__links {
+  list-style-type: none;
+  display: flex;
+  margin-top: 30px;
+  margin-right: 80px;
+  margin-bottom: 0;
+  margin-top: 0;
+  column-gap: 20px;
+}
+
+.nav__link {
+  color: black;
+  text-decoration: none;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.header__title-accent {
+  font-family: "Noto Serif";
+  font-style: italic;
+  font-size: 58px;
+  line-height: 72px;
+  color: #2f80ed;
+}
+
+.header__title {
+  margin-top: 183px;
+  margin-bottom: 28px;
+  margin-left: 80px;
+  max-width: 709px;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 58px;
+  line-height: 72px;
+  letter-spacing: -1px;
+}
+
+.header__description {
+  margin-top: 20px;
+  margin-bottom: 0px;
+  margin-left: 80px;
+  max-width: 683px;
+  font-family: "Noto Serif";
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.header__image {
+  width: 646px;
+  height: 568px;
+  position: absolute;
+  top: 124px;
+  right: 5px;
+}
+
+.header__info {
+  position: absolute;
+  bottom: 40px;
+  left: 80px;
+}
+
+.header__address {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 40px;
+  right: 80px;
+  margin-top: auto;
+}
+
+.header__paragraph {
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #838383;
+  margin: 0;
 }
