--- a/pages/index.css
+++ b/pages/index.css
@@ -2,8 +2,8 @@
   min-width: 1100px;
   max-width: 1600px;
   margin: auto;
-  font-family: "Inter", "Arial", sans-serif, "Noto Serif", "Times New Roman",
-    serif;
+  font-family: "Inter", "Arial", sans-serif, "Arial", sans-serif, "Noto Serif",
+    "Times New Roman", serif, "Times New Roman", serif;
   font-size: 16px;
   line-height: 20px;
   background-color: #ffffff;
@@ -46,14 +46,14 @@
 .nav__link {
   color: black;
   text-decoration: none;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
 }
 
 .header__title-accent {
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
   font-size: 58px;
   line-height: 72px;
@@ -65,7 +65,7 @@
   margin-bottom: 28px;
   margin-left: 80px;
   max-width: 709px;
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 58px;
   line-height: 72px;
@@ -77,7 +77,7 @@
   margin-bottom: 0px;
   margin-left: 80px;
   max-width: 683px;
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-size: 20px;
   line-height: 30px;
 }
@@ -106,10 +106,62 @@
 }
 
 .header__paragraph {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   color: #838383;
   margin: 0;
+}
+
+.recipes {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #0a2750;
+  background-image: url("../images/background_recipes.svg");
+  background-size: cover;
+  color: white;
+}
+
+.recipes__title {
+  margin-top: 100px;
+  margin-left: 80px;
+  margin-bottom: 24px;
+  max-width: 580px;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.recipes__subtitle {
+  margin-top: 24px;
+  margin-left: 80px;
+  margin-bottom: 80px;
+  max-width: 438px;
+  font-family: "Noto Serif";
+  font-size: 20px;
+  line-height: 30px;
+}
+
+.recipes__videos {
+  display: flex;
+  justify-content: center;
+  width: 480px;
+  height: 273px;
+  margin: 80px auto 215px;
+  padding: 0;
+  box-sizing: border-box;
+  gap: 40px;
+}
+
+.recipes__video-caption {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  margin-top: 24px;
 }
