--- a/pages/index.css
+++ b/pages/index.css
@@ -165,3 +165,12 @@
   line-height: 30px;
   margin-top: 24px;
 }
+
+.reservation {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #d9e7ff;
+  background-image: url("../images/background_reservation.svg");
+  background-size: cover;
+}
