--- a/pages/index.css
+++ b/pages/index.css
@@ -170,7 +170,95 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center; /* Añade esto para centrar horizontalmente */
   background-color: #d9e7ff;
   background-image: url("../images/background_reservation.svg");
   background-size: cover;
+}
+
+.reservation__title {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  margin-bottom: 80px;
+  font-family: "Inter";
+  font-weight: 500px;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.form__reservation {
+  width: 100%; /* Ocupa todo el ancho disponible */
+  max-width: 385px; /* Máximo ancho del formulario */
+  margin-top: 0;
+  margin-bottom: 120px;
+}
+
+.form__fieldset {
+  display: flex;
+  flex-direction: column;
+}
+
+.form__label {
+  margin-top: 0px;
+  margin-bottom: 8px;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__input {
+  box-sizing: border-box;
+  border-radius: 4px;
+  width: 100%;
+  margin-top: 8px;
+  margin-bottom: 32px;
+  height: 60px;
+  font-family: "Inter";
+  font-size: 20px;
+  line-height: 30px;
+
+  border-color: #838383;
+  margin: 0 0 32px;
+  padding: 15px 20px;
+}
+
+.form__button {
+  max-width: 385px;
+  height: 60px;
+  width: 100%;
+  font-family: "Inter";
+  font-weight: 500px;
+  font-size: 16px;
+  line-height: 20px;
+  background-color: #2f80ed;
+  color: white;
+  border-radius: 4px;
+}
+
+.form__button:hover {
+  opacity: 70%;
+}
+
+.form__checkbox {
+  display: flex;
+  justify-content: center;
+  flex-direction: row-reverse;
+  margin-top: 32px;
+}
+
+.form__checkbox-input {
+  width: 20px;
+  height: 20px;
+  margin-top: 0;
+  margin-right: 12px;
+}
+
+.checkbox__label {
+  margin-right: 12px;
+  font-family: "Inter";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
 }
