Actualizacion de clase en base a BEM

--- a/pages/index.css
+++ b/pages/index.css
@@ -255,7 +255,7 @@
   margin-right: 12px;
 }
 
-.checkbox__label {
+.form__checkbox-label {
   margin-right: 12px;
   font-family: "Inter";
   font-weight: 500;
