--- a/pages/index.css
+++ b/pages/index.css
@@ -179,8 +179,8 @@
 .reservation__title {
   display: flex;
   justify-content: center;
-  margin-top: 100px;
-  margin-bottom: 80px;
+  margin: 0px auto 80px;
+  padding-top: 100px;
   font-family: "Inter";
   font-weight: 500px;
   font-size: 44px;
