--- a/pages/index.css
+++ b/pages/index.css
@@ -1,264 +1,9 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: auto;
-  font-family: "Inter", "Arial", sans-serif, "Arial", sans-serif, "Noto Serif",
-    "Times New Roman", serif, "Times New Roman", serif;
-  font-size: 16px;
-  line-height: 20px;
-  background-color: #ffffff;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  background-image: url("../images/background_header.svg");
-  background-size: cover;
-  padding-top: 30px;
-  position: relative;
-  box-sizing: border-box;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__logo {
-  height: 39px;
-  width: 105px;
-  margin-left: 30px;
-}
-
-.nav__links {
-  list-style-type: none;
-  display: flex;
-  margin-top: 30px;
-  margin-right: 80px;
-  margin-bottom: 0;
-  margin-top: 0;
-  column-gap: 20px;
-}
-
-.nav__link {
-  color: black;
-  text-decoration: none;
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header__title-accent {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-style: italic;
-  font-size: 58px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__title {
-  margin-top: 183px;
-  margin-bottom: 28px;
-  margin-left: 80px;
-  max-width: 709px;
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 58px;
-  line-height: 72px;
-  letter-spacing: -1px;
-}
-
-.header__description {
-  margin-top: 20px;
-  margin-bottom: 0px;
-  margin-left: 80px;
-  max-width: 683px;
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  width: 646px;
-  height: 568px;
-  position: absolute;
-  top: 124px;
-  right: 5px;
-}
-
-.header__info {
-  position: absolute;
-  bottom: 40px;
-  left: 80px;
-}
-
-.header__address {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  bottom: 40px;
-  right: 80px;
-  margin-top: auto;
-}
-
-.header__paragraph {
-  font-family: "Inter", "Arial", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-  margin: 0;
-}
-
-.recipes {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: #0a2750;
-  background-image: url("../images/background_recipes.svg");
-  background-size: cover;
-  color: white;
-}
-
-.recipes__title {
-  margin-top: 100px;
-  margin-left: 80px;
-  margin-bottom: 24px;
-  max-width: 580px;
-  font-family: "Inter";
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  margin-top: 24px;
-  margin-left: 80px;
-  margin-bottom: 80px;
-  max-width: 438px;
-  font-family: "Noto Serif";
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  width: 480px;
-  height: 273px;
-  margin: 80px auto 215px;
-  padding: 0;
-  box-sizing: border-box;
-  gap: 40px;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  font-family: "Inter";
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  margin-top: 24px;
-}
-
-.reservation {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Añade esto para centrar horizontalmente */
-  background-color: #d9e7ff;
-  background-image: url("../images/background_reservation.svg");
-  background-size: cover;
-}
-
-.reservation__title {
-  display: flex;
-  justify-content: center;
-  margin: 0px auto 80px;
-  padding-top: 100px;
-  font-family: "Inter";
-  font-weight: 500px;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  width: 100%; /* Ocupa todo el ancho disponible */
-  max-width: 385px; /* Máximo ancho del formulario */
-  margin-top: 0;
-  margin-bottom: 120px;
-}
-
-.form__fieldset {
-  display: flex;
-  flex-direction: column;
-}
-
-.form__label {
-  margin-top: 0px;
-  margin-bottom: 8px;
-  font-family: "Inter";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__input {
-  box-sizing: border-box;
-  border-radius: 4px;
-  width: 100%;
-  margin-top: 8px;
-  margin-bottom: 32px;
-  height: 60px;
-  font-family: "Inter";
-  font-size: 20px;
-  line-height: 30px;
-
-  border-color: #838383;
-  margin: 0 0 32px;
-  padding: 15px 20px;
-}
-
-.form__button {
-  max-width: 385px;
-  height: 60px;
-  width: 100%;
-  font-family: "Inter";
-  font-weight: 500px;
-  font-size: 16px;
-  line-height: 20px;
-  background-color: #2f80ed;
-  color: white;
-  border-radius: 4px;
-}
-
-.form__button:hover {
-  opacity: 70%;
-}
-
-.form__checkbox {
-  display: flex;
-  justify-content: center;
-  flex-direction: row-reverse;
-  margin-top: 32px;
-}
-
-.form__checkbox-input {
-  width: 20px;
-  height: 20px;
-  margin-top: 0;
-  margin-right: 12px;
-}
-
-.form__checkbox-label {
-  margin-right: 12px;
-  font-family: "Inter";
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
+@import url("../vendor/normalize.css");
+@import url("../blocks/page.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/header.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
+@import url("../blocks/footer.css");
+@import url("../blocks/footer.css");
