--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -3,12 +3,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: auto;
   background-color: #0a2850;
   color: white;
 }
 
 .footer__content {
-  z-index: 12;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
   margin-top: 60px;
@@ -75,6 +76,7 @@
 .footer__copyright {
   margin-top: 0;
   margin-bottom: 60px;
+  margin-left: 80px;
   font-family: "Inter";
   font-size: 16px;
   line-height: 20px;
